--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.9",
+    "crc-32": "^1.2.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
