--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.19.0",
     "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
     "crc-32": "^1.2.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "realm-web": "^1.2.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   },
@@ -27,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prisma": "^2.19.0",
     "typescript": "^4.2.3"
   }
 }
