--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^2.19.0",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.21",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "crc-32": "^1.2.0",
+    "enzyme": "^3.11.0",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -24,6 +30,7 @@
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
