--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "db:setup": "npx prisma migrate dev",
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose stop"
   },
